--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/_ViewImports.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @using AspNetCoreMentoring.UI
-@using AspNetCoreMentoring.UI.Models
+@using AspNetCoreMentoring.UI.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
