implement create and edit functionality for products, add validation for add/edit product modes

--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Products/Index.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Products/Index.cshtml
@@ -1,35 +1,47 @@
-﻿@model IEnumerable<ProductViewModel>
+﻿@model IEnumerable<AspNetCoreMentoring.UI.ViewModels.Product.ProductReadListViewModel>
+<hr/>
+<p>
+    <a asp-area="" asp-controller="Products" asp-action="CreateProduct" class=" btn btn-success">Create New Product</a>
+
+</p>
 <div class="row">
     <div class="col-md-8">
         <table class="table table-bordered">
             <thead>
-                   <tr>
-                       <th >ProductId</th>
-                       <th>ProductName</th>
-                       <th>QuantityPerUnit</th>
-                       <th>UnitPrice</th>
-                       <th>UnitsInStock</th>
-                       <th>UnitsOnOrder</th>
-                       <th>ReorderLevel</th>
-                       <th>Discontinued</th>
-                       <th>CategoryName</th>
-                       <th>SupplierName</th>
-                   </tr>
+                <tr>
+                    <th>ProductId</th>
+                    <th>ProductName</th>
+                    <th>QuantityPerUnit</th>
+                    <th>UnitPrice</th>
+                    <th>UnitsInStock</th>
+                    <th>UnitsOnOrder</th>
+                    <th>ReorderLevel</th>
+                    <th>Discontinued</th>
+                    <th>CategoryName</th>
+                    <th>SupplierName</th>
+                </tr>
 
             </thead>
             @foreach (var product in Model)
             {
                 <tr>
-                    <td>   @Html.DisplayFor(modelItem => product.ProductId)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.ProductName)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.QuantityPerUnit)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.UnitPrice)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.UnitsInStock)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.UnitsOnOrder)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.ReorderLevel)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.Discontinued)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.CategoryName)</td>
-                    <td>   @Html.DisplayFor(modelItem => product.SupplierName)</td>
+                    <td> @Html.DisplayFor(modelItem => product.ProductId)</td>
+                    <td>
+                        <a asp-area=""
+                           asp-controller="Products"
+                           asp-action="EditProduct"
+                           asp-route-id="@product.ProductId">
+                            @Html.DisplayFor(modelItem => product.ProductName)
+                        </a>
+                    </td>
+                    <td> @Html.DisplayFor(modelItem => product.QuantityPerUnit)</td>
+                    <td> @Html.DisplayFor(modelItem => product.UnitPrice)</td>
+                    <td> @Html.DisplayFor(modelItem => product.UnitsInStock)</td>
+                    <td> @Html.DisplayFor(modelItem => product.UnitsOnOrder)</td>
+                    <td> @Html.DisplayFor(modelItem => product.ReorderLevel)</td>
+                    <td> @Html.DisplayFor(modelItem => product.Discontinued)</td>
+                    <td> @Html.DisplayFor(modelItem => product.CategoryName)</td>
+                    <td> @Html.DisplayFor(modelItem => product.SupplierName)</td>
                 </tr>
             }
 
