--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Categories/Index.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CategoryViewModel>
+﻿@model IEnumerable<AspNetCoreMentoring.UI.ViewModels.Category.CategoryReadListViewModel>
 <div class="row">
     <div class="col-md-8">
         <table class="table table-bordered">
