add serilog loging provider with two targets console and file, configuration extracted from the appsettings.json file

--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Home/Index.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div >
+<div>
     <p>Welcome to the Mentoring application</p>
+    <img src="~/images/mentoring-quote.jpg" class="img-fluid" />
 </div>
