--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_Layout.cshtml
@@ -52,6 +52,8 @@
 <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <script src="~/node_modules/jquery-validation/dist/jquery.validate.js"></script>
 <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
+<script src="~/node_modules/globalize/dist/globalize.js"></script>
+<script src="~/node_modules/jquery-validation-globalize/jquery.validate.globalize.js"></script>
 @*<environment include="Development">
                 <script src="~/lib/jquery/dist/jquery.js"></script>
                 <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
