--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Home/Index.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Home/Index.cshtml
@@ -1,8 +1,41 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "_AddittionalLayout";
 }
 
-<div>
-    <p>Welcome to the Mentoring application</p>
-    <img src="~/images/mentoring-quote.jpg" class="img-fluid" />
+
+<div class="col-md-8 ">
+    <div class="card-body">
+        <h4 class="card-title">John C. Maxwell</h4>
+        <p class="card-text">
+            Below you will find our collection of inspirational, wise, and humorous old mentors quotes, mentors sayings, and mentors proverbs, collected over the years from a variety of sources.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">John C. Maxwell</h4>
+        <p class="card-text">
+            The best way a mentor can prepare another leader is to expose him or her to other great people.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">John C. Crosby</h4>
+        <p class="card-text">
+            Mentoring is a brain to pick, an ear to listen, and a push in the right direction.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">  Bob Proctor</h4>
+        <p class="card-text">
+            A mentor is someone who sees more talent and ability within you, than you see in yourself, and helps bring it out of you.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">
+            Samuel Smiles
+        </h4>
+        <p class="card-text">
+            Alexander the Great valued learning so highly, that he used to say he was more indebted to Aristotle for giving him knowledge than to his father Philip for life.
+        </p>
+    </div>
 </div>
+
