--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Categories/EditCategory.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Categories/EditCategory.cshtml
@@ -1,6 +1,8 @@
 ﻿@model AspNetCoreMentoring.UI.ViewModels.Category.CategoryWriteItemViewModel
-
-<h2>EditCategory</h2>
+@{
+    ViewData["Title"] = "Edit Category";
+}
+<h2>Edit Category</h2>
 
 <hr />
 <div class="row">
@@ -28,7 +30,7 @@
     <div class="col-md-5">
         Current Category Image
         <div class="form-group">
-            <img src="data:image;base64,@Convert.ToBase64String(Model.Picture)"  class="img-fluid"/>
+            <img src="data:image;base64,@Convert.ToBase64String(Model.Picture)" class="img-fluid" />
         </div>
 
         <form method="post" enctype="multipart/form-data" asp-controller="Categories" asp-action="UploadCategoryImage">
@@ -36,7 +38,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     <label for="formControlFile">Upload file using this form:</label>
-                    <input type="file" name="CategoryImage" class="form-control-file"  id="formControlFile"/>
+                    <input type="file" name="CategoryImage" class="form-control-file" id="formControlFile" />
                 </div>
             </div>
             <div class="form-group">
