--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Home/Index.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Home/Index.cshtml
@@ -2,9 +2,7 @@
     ViewData["Title"] = "Home Page";
     Layout = "_AddittionalLayout";
 }
-
-
-<div class="col-md-8 ">
+<div class="col-md-8  ">
     <div class="card-body">
         <h4 class="card-title">John C. Maxwell</h4>
         <p class="card-text">
@@ -35,6 +33,46 @@
         </h4>
         <p class="card-text">
             Alexander the Great valued learning so highly, that he used to say he was more indebted to Aristotle for giving him knowledge than to his father Philip for life.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">
+            Vivek Wadhwa
+        </h4>
+        <p class="card-text">
+            What you want in a mentor is someone who truly cares for you and who will look after your interests and not just their own. When you do come across the right person to mentor you, start by showing them that the time they spend with you is worthwhile.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">
+            Allan Houston
+        </h4>
+        <p class="card-text">
+            The more consistent a father can be or a mentor can be in the person's life and teach them principles of real solid manhood, character, integrity and leadership, the more consistent you can be in the person's life and teach them those things at a younger age, and then the better off they'll be.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">
+            Sean Paul
+        </h4>
+        <p class="card-text">
+            I think kids should have a mentor and a role model, but that they shouldn't take one person's opinion to be what we call final assessment or judgment about how life is supposed to be.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">
+            Steve Maraboli
+        </h4>
+        <p class="card-text">
+            My mistakes have been my greatest mentors.
+        </p>
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">
+            Clark Moustakas
+        </h4>
+        <p class="card-text">
+            We can help a person to be himself by our own willingness to steep ourselves temporarily in his world, in his private feelings and experiences. By our affirmation of the person as he is, we give him support and strength to take the next step in his own growth.
         </p>
     </div>
 </div>
