--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/_ViewImports.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 @using AspNetCoreMentoring.UI
 @using AspNetCoreMentoring.UI.ViewModels
+
+@using AspNetCoreMentoring.UI.Helpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCoreMentoring.UI
