task 5 implement asp net identity, add integration with azure ad aas external identity provider

--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_AddittionalLayout.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_AddittionalLayout.cshtml
@@ -22,7 +22,7 @@
                     <a class="nav-link" asp-area="" asp-controller="Categories" asp-action="Index">Categories </a>
                 </li>
             </ul>
-
+            @await Html.PartialAsync("~/Views/Shared/_LoginPartial.cshtml")
         </div>
     </nav>
     <div class="container body-content ">
