Task5, implemented Asp Net COre Identity, Azure Ad as external provider, Email Confirmation and MFA were also enabled, RBAC fucntionality implemented

--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_LoginPartial.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_LoginPartial.cshtml
@@ -4,11 +4,19 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    var currentUser = await UserManager.GetUserAsync(User);
+
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
+            @if (User.IsInRole("Administrator"))
+            {
+                <li>
+                    <a class="nav-link" asp-controller="Roles" asp-action="Index" title="Roles Management">Roles Management</a>
+                </li>
+            }
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
             </li>
