--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -5,6 +5,21 @@
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
+
+@section Scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+
+    <script type="text/javascript" src="~/lib/qrcode.js"></script>
+    <script type="text/javascript">
+        new QRCode(document.getElementById("qrCode"),
+            {
+                text: "@Html.Raw(Model.AuthenticatorUri)",
+                width: 150,
+                height: 150
+            });
+    </script>
+}
+
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <h4>@ViewData["Title"]</h4>
 <div>
@@ -49,6 +64,6 @@
     </ol>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+}*@
