--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_AddittionalLayout.cshtml
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/Views/Shared/_AddittionalLayout.cshtml
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AspNetCoreMentoring.UI</title>
-    <link href="~/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    @*<link href="~/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />*@
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/css/site.min.css" rel="stylesheet" />
+    </environment>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -41,11 +48,17 @@
         </div>
 
     </footer>
-    <script src="~/node_modules/jquery/dist/jquery.js"></script>
-    <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/node_modules/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
-    <script src="~/node_modules/globalize/dist/globalize.js"></script>
-    <script src="~/node_modules/jquery-validation-globalize/jquery.validate.globalize.js"></script>
+
+    <environment include="Development">
+        <script src="~/node_modules/jquery/dist/jquery.js"></script>
+        <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/node_modules/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
+        <script src="~/node_modules/globalize/dist/globalize.js"></script>
+        <script src="~/node_modules/jquery-validation-globalize/jquery.validate.globalize.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/js/libs.min.js"></script>
+    </environment>
 </body>
 </html>
